# blog_backend

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: test-python.yaml
blog/blog_handler/: main.py  models.py
blog/blog_handler/core/: dynamodb_handler.py  models.py
blog/blog_handler/routes/: auth.py  blog.py
blog/tests/core/: test_dynamodb_handler.py
blog/tests/utils/: database.py
interface/: api.yaml
scripts/: clean_up.sh  create_lambda_package.sh  deploy_aws.sh
terraform/: aws_api.tf  aws_iam.tf  aws_lambda.tf  aws_sns.tf  aws_vars.tf  dynamodb.tf  lambda.tf  logs.tf
