[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Florent Haxhiu <florenthaxhiu03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.2"
moto = "^4.2.11"
pydantic = "^2.5.2"
aws-lambda-powertools = "^2.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
