[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Florent Haxhiu <florenthaxhiu03@gmail.com>"]
readme = "README.md"
packages = [
    { include = "blog" }
]


[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.2"
moto = "^4.2.11"
aws-lambda-powertools = "^2.30.1"
boto3-stubs = "^1.34.90"
flake8 = "^7.0.0"
mypy-boto3-dynamodb = "^1.34.91"

[tool.pyright]
venvPath = "."
venv = ".venv"

reportUnknownParameterType = true
reportUntypedFunctionDecorator = true

reportMissingImports = true
reportMissingTypeStubs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
